# oscillator_playground

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: semgrep.yml
src/: device.rs  device_manager.rs  envelope.rs  events.rs  lfo.rs  main.rs  midi.rs  modulation.rs  oscillator.rs  oscillators.rs  sequencer.rs  synth.rs  ui.rs
src/oscillator/: noise.rs  ramp.rs  saw.rs  sine.rs  square.rs  triangle.rs
src/oscillators/: noise.rs  ramp.rs  saw.rs  sine.rs  square.rs  super_saw.rs  triangle.rs
src/synth/: arpeggiator.rs  constants.rs  device.rs  dynamics.rs  effects.rs  envelope.rs  filter.rs  lfo.rs  oscillators.rs  saturation.rs  sequencer.rs
src/synth/oscillators/: am.rs  fm.rs  noise.rs  pulse.rs  ramp.rs  saw.rs  sine.rs  square.rs  sub.rs  super_saw.rs  triangle.rs
ui/: arpeggiator-panel.slint  buttons-panel.slint  components.slint  dynamics-panel.slint  effects-panel.slint  envelope-panel.slint  filter-panel.slint  lfo-panel.slint  main.slint  oscillator-global-panel.slint  oscillator-panel.slint  oscillator.slint  oscillator_playground.slint  settings-panel.slint  theme.slint
